--- a/wiki/_includes/docs_header.html
+++ b/wiki/_includes/docs_header.html
@@ -1,14 +1,12 @@
 <div class="docs-header" id="content">
   <div class="container">
-  	{% if page.title%}
-  		<!--
-		    <h1>{{ page.title }}</h1>
-		    <p>Post on {{ page.date | date: "%b %d, %Y" }} by <a href="/about">{{ site.author }}</a></p>
-		-->
+  	<p>{{ site.description }}</p>
+  	<!-- {% if page.title%}
+  		
 		    <h1>{{ site.motto }}</h1>
     {% else %}
 	    <h1>{{ site.name }}</h1>
 	    <p>{{ site.description }}</p>
-    {% endif %}
+    {% endif %} -->
   </div>
 </div>
