--- a/wiki/_includes/header.html
+++ b/wiki/_includes/header.html
@@ -6,21 +6,24 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">
+      <a href="#" class="navbar-brand">
         <img src="{{ '/styles/images/logo.jpg' | prepend: site.baseurl }}">
       </a>
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">    
-        <li>
+        <!-- <li>
           <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
-        </li>
-        <li>
+        </li> -->
+        <!-- <li>
           <a href="{{ '/categories/' | prepend: site.baseurl }}">大类分解</a>
+        </li> -->
+        <li>
+          <a href="{{ '/tag' | prepend: site.baseurl }}">首页</a>
         </li>
         <li>
-          <a href="{{ '/tag' | prepend: site.baseurl }}">小类内聚</a>
-        </li>
+          <a href="#">关于我们</a>
+        </li> 
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
