--- a/wiki/styles/css/index.css
+++ b/wiki/styles/css/index.css
@@ -6319,7 +6319,7 @@ hr {
 }
 /* Page headers */
 .docs-header {
-  padding: 30px 15px 50px;
+  padding: 30px 15px 2px;
   /* side padding builds on .container 15px, so 30px */
   font-size: 16px;
   text-align: center;
@@ -6518,8 +6518,8 @@ hr {
   border-color: #111f36;
 }
 .docs-nav .container .navbar-brand {
-  margin: 12px 0 0;
-  width: 100px;
+  margin: 12px 0 10px;
+  width: 50px;
   padding: 0;
 }
 .docs-nav .container .navbar-brand img {
