--- a/wiki/_includes/header.html
+++ b/wiki/_includes/header.html
@@ -25,7 +25,7 @@
           <a href="#">关于我们</a>
         </li> 
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <!-- <ul class="nav navbar-nav navbar-right">
         <li>
           <a href="{{ '/donate/' | prepend: site.baseurl }}"><strong>打赏</strong></a>
         </li>
@@ -41,7 +41,7 @@
             <li><a rel="nofollow" target="_blank" href="https://github.com/luoyan35714/LessOrMore.git">本项目</a></li>
           </ul>
         </li>
-      </ul>
+      </ul> -->
     </nav>
   </div>
 </header>
