--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
           <a href="{{ '/categories/' | prepend: site.baseurl }}">大类分解</a>
         </li> -->
         <li>
-          <a href="{{ '/tag' | prepend: site.baseurl }}">首页</a>
+          <a href="{{ '/tag/' | prepend: site.baseurl }}">首页</a>
         </li>
         <li>
           <a href="#">关于我们</a>
