--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,10 +22,10 @@
           <a href="{{ '/tag/' | prepend: site.baseurl }}">首页</a>
         </li>
         <li>
-          <a href="http://www.shinemo.com/about">关于我们</a>
+          <a href="http://www.shinemo.com/about" target="_blank">关于我们</a>
         </li>
         <li>
-          <a href="http://www.shinemo.com/contact">联系我们</a>
+          <a href="http://www.shinemo.com/contact" target="_blank">联系我们</a>
         </li> 
       </ul>
       <!-- <ul class="nav navbar-nav navbar-right">
